{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 27,
  "lineage": "1a4c3a95-7136-a0a5-23fa-d0881d2f2fcc",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-038bc8ebddd2ec065",
            "public_dns": "ec2-54-220-190-80.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.190.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-test-vpc-eu-west-1a",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:144718742681:internet-gateway/igw-081fa01b457dd3f6e",
            "id": "igw-081fa01b457dd3f6e",
            "owner_id": "144718742681",
            "tags": {
              "Name": "terraform-test-vpc",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared"
            },
            "vpc_id": "vpc-07ef8f308a34da416"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038bc8ebddd2ec065",
            "id": "nat-0a318c5c9cadceaa5",
            "network_interface_id": "eni-0d3a6d701bc8652a3",
            "private_ip": "10.0.4.134",
            "public_ip": "54.220.190.80",
            "subnet_id": "subnet-006658fca06bf5cc7",
            "tags": {
              "Name": "terraform-test-vpc-eu-west-1a",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d2ae2b7bed3017981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a318c5c9cadceaa5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2ae2b7bed301798",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-081fa01b457dd3f6e",
            "id": "r-rtb-0bb1c4ce8c64aa0be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb1c4ce8c64aa0be",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d2ae2b7bed301798",
            "owner_id": "144718742681",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-test-vpc-private",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared"
            },
            "vpc_id": "vpc-07ef8f308a34da416"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bb1c4ce8c64aa0be",
            "owner_id": "144718742681",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-test-vpc-public",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared"
            },
            "vpc_id": "vpc-07ef8f308a34da416"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d42f890c7d935fe",
            "route_table_id": "rtb-0d2ae2b7bed301798",
            "subnet_id": "subnet-0decdaad17da42c18"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03403d194d5ba4cdd",
            "route_table_id": "rtb-0d2ae2b7bed301798",
            "subnet_id": "subnet-050dd88399cbe9dfd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e37662feccf2aa7e",
            "route_table_id": "rtb-0d2ae2b7bed301798",
            "subnet_id": "subnet-03482dcc1d01bb72e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0574400c7c7c52d6b",
            "route_table_id": "rtb-0bb1c4ce8c64aa0be",
            "subnet_id": "subnet-006658fca06bf5cc7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8668c250af75720",
            "route_table_id": "rtb-0bb1c4ce8c64aa0be",
            "subnet_id": "subnet-0d48a2161d42c978d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040a4eeb31cae66df",
            "route_table_id": "rtb-0bb1c4ce8c64aa0be",
            "subnet_id": "subnet-07977acab84932b96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:144718742681:subnet/subnet-0decdaad17da42c18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0decdaad17da42c18",
            "map_public_ip_on_launch": false,
            "owner_id": "144718742681",
            "tags": {
              "Name": "terraform-test-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07ef8f308a34da416"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:144718742681:subnet/subnet-050dd88399cbe9dfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-050dd88399cbe9dfd",
            "map_public_ip_on_launch": false,
            "owner_id": "144718742681",
            "tags": {
              "Name": "terraform-test-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07ef8f308a34da416"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:144718742681:subnet/subnet-03482dcc1d01bb72e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03482dcc1d01bb72e",
            "map_public_ip_on_launch": false,
            "owner_id": "144718742681",
            "tags": {
              "Name": "terraform-test-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07ef8f308a34da416"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:144718742681:subnet/subnet-006658fca06bf5cc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-006658fca06bf5cc7",
            "map_public_ip_on_launch": true,
            "owner_id": "144718742681",
            "tags": {
              "Name": "terraform-test-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07ef8f308a34da416"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:144718742681:subnet/subnet-0d48a2161d42c978d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0d48a2161d42c978d",
            "map_public_ip_on_launch": true,
            "owner_id": "144718742681",
            "tags": {
              "Name": "terraform-test-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07ef8f308a34da416"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:144718742681:subnet/subnet-07977acab84932b96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-07977acab84932b96",
            "map_public_ip_on_launch": true,
            "owner_id": "144718742681",
            "tags": {
              "Name": "terraform-test-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07ef8f308a34da416"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:144718742681:vpc/vpc-07ef8f308a34da416",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07cab6b8738fbe312",
            "default_route_table_id": "rtb-01f8aeaec4baa22a9",
            "default_security_group_id": "sg-022a837163f190050",
            "dhcp_options_id": "dopt-05c3f063",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07ef8f308a34da416",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01f8aeaec4baa22a9",
            "owner_id": "144718742681",
            "tags": {
              "Name": "terraform-test-vpc",
              "kubernetes.io/cluster/terraform-test-eks-xymFmvAz": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}